# azpainter

./: AUTHORS  BSD  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README.md  README_en  README_ja  config.h.in  configure  configure.ac
data/: Makefile.am  Makefile.in
data/texture/: Makefile.am  Makefile.in
data/tr/: en.mtr  ja.mtr  ru.mtr  uk.mtr  zh_CN.mtr
desktop/: Makefile.am  Makefile.in
mlib/: Makefile.am  Makefile.in
mlib/include/: mAccelerator.h  mAppDef.h  mArrowButton.h  mBitImgButton.h  mBufOperate.h  mButton.h  mCheckButton.h  mClipboard.h  mColorButton.h  mColorConv.h  mColorPreview.h  mComboBox.h  mConfig.h  mContainer.h  mContainerDef.h  mContainerView.h  mCursor.h  mDef.h  mDefGui.h  mDialog.h  mDirEntry.h  mDockHeader.h  mDockWidget.h  mEnumFont.h  mEvent.h  mExpander.h  mFTGSUB.h  mFile.h  mFileDialog.h  mFileDialogConfig.h  mFileList.h  mFileListView.h  mFileStat.h  mFont.h  mFontButton.h  mFontConfig.h  mFreeType.h  mGIFDecode.h  mGIFEncode.h  mGroupBox.h  (+68 more)
mlib/src/: mAccelerator.c  mBufOperate.c  mColorConv.c  mDef.c  mFileList.c  mFont_common.c  mGui.c  mGui_key.c  mIOFileBuf.c  mIniRead.c  mIniWrite.c  mList.c  mMemAuto.c  mMemDebug.c  mMenu.c  mMessageBox.c  mNanoTime_common.c  mRandXorShift.c  mRectBox.c  mStr.c  mTextParam.c  mTextRead.c  mTree.c  mUndo.c  mUtil.c  mUtilCharCode.c  mUtilFile_common.c  mUtilStdio.c  mUtilStr.c
mlib/src/image/: mGIFDecode.c  mGIFEncode.c  mImageBuf.c  mImageList.c  mLoadImage.c  mLoadImage_bmp.c  mLoadImage_gif.c  mLoadImage_jpeg.c  mLoadImage_png.c  mPSDLoad.c  mPSDSave.c  mPixbuf.c  mPixbuf_2.c  mSaveImage.c  mSaveImage_bmp.c  mSaveImage_gif.c  mSaveImage_jpeg.c  mSaveImage_png.c
mlib/src/lib/: mFTGSUB.c  mFontConfig.c  mFreeType.c  mZlib.c
mlib/src/linux/: mDirEntry.c  mEnumFont.c  mFile.c  mFont.c  mNanoTime.c  mPath.c  mThread.c  mUtilFile.c  mUtilSys.c
mlib/src/private/: mAppPrivate.h  mAppTimer.c  mAppTimer.h  mEditTextBuf.c  mEditTextBuf.h  mEventList.c  mEventList.h  mEvent_pv.c  mEvent_pv.h  mLVItemMan.c  mLVItemMan.h  mListViewArea.c  mListViewArea.h  mListViewPopup.c  mListViewPopup.h  mMenuWindow.c  mMenuWindow.h  mMenu_pv.c  mMenu_pv.h  mMultiEditArea.c  mMultiEditArea.h  mPixbuf_pv.h  mTranslation.c  mTranslation.h  mWidget_pv.c  mWidget_pv.h  mWindow_pv.h
mlib/src/widget/: mAboutDlg.c  mArrowButton.c  mBitImgButton.c  mButton.c  mCheckButton.c  mColorButton.c  mColorDialog.c  mColorPreview.c  mComboBox.c  mContainer.c  mContainerView.c  mContainer_layout.c  mDialog.c  mDockHeader.c  mDockWidget.c  mExpander.c  mFileDialog.c  mFileListView.c  mFontButton.c  mFontDialog.c  mGroupBox.c  mHSVPicker.c  mIconButtons.c  mInputAccelKey.c  mInputTextDlg.c  mLabel.c  mLineEdit.c  mListHeader.c  mListView.c  mMenuBar.c  mMultiEdit.c  mPopupProgress.c  mPopupWindow.c  mProgressBar.c  mScrollBar.c  mScrollView.c  mSliderBar.c  mSplitter.c  mTab.c  mTextButtons.c  (+4 more)
mlib/src/x11/: x11_clipboard.c  x11_clipboard.h  x11_cursor.c  x11_dnd.c  x11_dnd.h  x11_event.c  x11_event_sub.c  x11_event_sub.h  x11_im.c  x11_im.h  x11_keyconv.c  x11_main.c  x11_pixbuf.c  x11_util.c  x11_util.h  x11_widget.c  x11_window.c  x11_window.h  x11_xinput2.c  x11_xinput2.h
src/: AppCursor.c  AppResource.c  ConfigData.c  Makefile.am  Makefile.in  configfile.c  deftrans.h  main.c
src/draw/: draw_boxedit.c  draw_calc.c  draw_canvas.c  draw_image.c  draw_layer.c  draw_load_adw.c  draw_load_apd_v1v2.c  draw_loadsave_apd_v3.c  draw_loadsave_psd.c  draw_main.c  draw_op_brush.c  draw_op_func1.c  draw_op_func2.c  draw_op_main.c  draw_op_spline.c  draw_op_sub.c  draw_op_xor.c  draw_rule.c  draw_save_image.c  draw_select.c  draw_update.c
src/filter/: PerlinNoise.c  PerlinNoise.h  filter_antialiasing.c  filter_blur.c  filter_color.c  filter_comic.c  filter_draw.c  filter_effect.c  filter_mediancut.c  filter_other1.c  filter_sub.h  filter_subfunc.c  filter_transform.c
src/image/: ImageBuf24.c  ImageBuf8.c  ImageBufRGB16.c  ImageBufRGB16_canvas.c  PixbufDraw.c  TileImage.c  TileImage_draw.c  TileImage_draw_brush.c  TileImage_draw_sub.c  TileImage_edit.c  TileImage_imagefile.c  TileImage_pixel.c  TileImage_pv.c  TileImage_pv.h  TileImage_scaling.c  TileImage_select.c  TileImage_type_a1.c  TileImage_type_a16.c  TileImage_type_gray.c  TileImage_type_rgba.c  blendcol.c
src/include/: AppCursor.h  AppErr.h  AppResource.h  BrushDrawParam.h  BrushItem.h  BrushList.h  BrushSizeList.h  CanvasDialogs.h  ColorPalette.h  ColorValue.h  ColorWheel.h  ConfigData.h  DockObject.h  Docks_external.h  DrawFill.h  DrawFont.h  DrawPointBuf.h  EnvOptDlg.h  FileDialog.h  FillPolygon.h  FilterBar.h  FilterDefWidget.h  FilterDrawFunc.h  FilterDrawInfo.h  FilterPrev.h  FilterSaveData.h  GradationList.h  ImageBuf24.h  ImageBuf8.h  ImageBufRGB16.h  LayerDialogs.h  LayerItem.h  LayerList.h  MainWinCanvas.h  MainWindow.h  MainWindow_pv.h  MaterialImgList.h  PixbufDraw.h  PopupThread.h  PrevCursor.h  (+50 more)
src/other/: BrushItem.c  BrushList.c  BrushSizeList.c  ColorPalette.c  ColorValue.c  DrawFill.c  DrawFont.c  DrawPointBuf.c  FillPolygon.c  FilterSaveData.c  GradationList.c  LayerItem.c  LayerList.c  MaterialImgList.c  SinTable.c  SplineBuf.c  Undo.c  UndoItem.c  UndoItem_base.c  UndoItem_sub.c  UndoItem_tileimg.c  UndoMaster.h  file_apd_v3.c  undo_compress.c
src/widget/: BrushDetailDlg.c  BrushListEdit.c  CanvasCtrlBar.c  CanvasCtrlBar.h  CanvasDialogs.c  CanvasKeyDlg.c  ColorWheel.c  DockBrush.c  DockBrushList.c  DockBrushSize.c  DockCanvasCtrl.c  DockCanvasView.c  DockCanvasView.h  DockCanvasViewArea.c  DockCanvasView_dlg.c  DockColor.c  DockColorPalette.c  DockColorPalette_colpal.c  DockColorPalette_editpaldlg.c  DockColorPalette_gradbar.c  DockColorPalette_hlspal.c  DockColorPalette_tab.c  DockColorWheel.c  DockColor_tab.c  DockColor_widget.c  DockFilterList.c  DockImageViewer.c  DockImageViewer.h  DockImageViewerArea.c  DockLayer.c  DockLayer_area.c  DockLayer_param.c  DockObject.c  DockOption.c  DockOption_other.c  DockOption_sub.h  DockOption_tool.c  DockOption_tool_grad.c  DockTool.c  DrawTextDlg.c  (+46 more)
translation/: Makefile  en  ja  mtrconv.c  pt_BR  ru  (+2 more)
