AM_CPPFLAGS=-Iinclude -Isrc/private -I@freetype_dir@
AM_CFLAGS=-pthread

noinst_LIBRARIES=libmlib.a

libmlib_a_SOURCES= \
include/mAccelerator.h \
include/mAppDef.h \
include/mArrowButton.h \
include/mBitImgButton.h \
include/mBufOperate.h \
include/mButton.h \
include/mCheckButton.h \
include/mClipboard.h \
include/mColorButton.h \
include/mColorConv.h \
include/mColorPreview.h \
include/mComboBox.h \
include/mConfig.h \
include/mContainer.h \
include/mContainerDef.h \
include/mContainerView.h \
include/mCursor.h \
include/mDef.h \
include/mDefGui.h \
include/mDialog.h \
include/mDirEntry.h \
include/mDockHeader.h \
include/mDockWidget.h \
include/mEnumFont.h \
include/mEvent.h \
include/mExpander.h \
include/mFTGSUB.h \
include/mFile.h \
include/mFileDialog.h \
include/mFileDialogConfig.h \
include/mFileList.h \
include/mFileListView.h \
include/mFileStat.h \
include/mFont.h \
include/mFontButton.h \
include/mFontConfig.h \
include/mFreeType.h \
include/mGIFDecode.h \
include/mGIFEncode.h \
include/mGroupBox.h \
include/mGui.h \
include/mHSVPicker.h \
include/mIOFileBuf.h \
include/mIconButtons.h \
include/mImageBuf.h \
include/mImageList.h \
include/mIniRead.h \
include/mIniWrite.h \
include/mInputAccelKey.h \
include/mKeyDef.h \
include/mLabel.h \
include/mLineEdit.h \
include/mList.h \
include/mListDef.h \
include/mListView.h \
include/mListViewItem.h \
include/mLoadImage.h \
include/mMemAuto.h \
include/mMemDebug.h \
include/mMenu.h \
include/mMenuBar.h \
include/mMessageBox.h \
include/mMultiEdit.h \
include/mNanoTime.h \
include/mPSDDef.h \
include/mPSDLoad.h \
include/mPSDSave.h \
include/mPath.h \
include/mPixbuf.h \
include/mPopupProgress.h \
include/mPopupWindow.h \
include/mProgressBar.h \
include/mRandXorShift.h \
include/mRectBox.h \
include/mSaveImage.h \
include/mScrollBar.h \
include/mScrollView.h \
include/mScrollViewArea.h \
include/mSliderBar.h \
include/mSplitter.h \
include/mStr.h \
include/mStrDef.h \
include/mSysCol.h \
include/mSysDialog.h \
include/mSysX11.h \
include/mTab.h \
include/mTextButtons.h \
include/mTextParam.h \
include/mTextRead.h \
include/mThread.h \
include/mToolTip.h \
include/mTrans.h \
include/mTree.h \
include/mTreeDef.h \
include/mUndo.h \
include/mUtil.h \
include/mUtilCharCode.h \
include/mUtilFile.h \
include/mUtilStdio.h \
include/mUtilStr.h \
include/mUtilSys.h \
include/mWidget.h \
include/mWidgetBuilder.h \
include/mWidgetDef.h \
include/mWindow.h \
include/mWindowDef.h \
include/mZlib.h \
include/mListHeader.h \
src/mAccelerator.c \
src/mBufOperate.c \
src/mColorConv.c \
src/mDef.c \
src/mFileList.c \
src/mFont_common.c \
src/mGui.c \
src/mGui_key.c \
src/mIOFileBuf.c \
src/mIniRead.c \
src/mIniWrite.c \
src/mList.c \
src/mMemAuto.c \
src/mMemDebug.c \
src/mMenu.c \
src/mMessageBox.c \
src/mNanoTime_common.c \
src/mRandXorShift.c \
src/mRectBox.c \
src/mStr.c \
src/mTextParam.c \
src/mTextRead.c \
src/mTree.c \
src/mUndo.c \
src/mUtil.c \
src/mUtilCharCode.c \
src/mUtilFile_common.c \
src/mUtilStdio.c \
src/mUtilStr.c \
src/image/mGIFDecode.c \
src/image/mGIFEncode.c \
src/image/mImageBuf.c \
src/image/mImageList.c \
src/image/mLoadImage.c \
src/image/mLoadImage_bmp.c \
src/image/mLoadImage_gif.c \
src/image/mLoadImage_jpeg.c \
src/image/mLoadImage_png.c \
src/image/mPSDLoad.c \
src/image/mPSDSave.c \
src/image/mPixbuf.c \
src/image/mPixbuf_2.c \
src/image/mSaveImage.c \
src/image/mSaveImage_bmp.c \
src/image/mSaveImage_gif.c \
src/image/mSaveImage_jpeg.c \
src/image/mSaveImage_png.c \
src/lib/mFTGSUB.c \
src/lib/mFontConfig.c \
src/lib/mFreeType.c \
src/lib/mZlib.c \
src/linux/mDirEntry.c \
src/linux/mEnumFont.c \
src/linux/mFile.c \
src/linux/mFont.c \
src/linux/mNanoTime.c \
src/linux/mPath.c \
src/linux/mThread.c \
src/linux/mUtilFile.c \
src/linux/mUtilSys.c \
src/private/mAppPrivate.h \
src/private/mAppTimer.c \
src/private/mAppTimer.h \
src/private/mEditTextBuf.c \
src/private/mEditTextBuf.h \
src/private/mEventList.c \
src/private/mEventList.h \
src/private/mEvent_pv.c \
src/private/mEvent_pv.h \
src/private/mLVItemMan.c \
src/private/mLVItemMan.h \
src/private/mListViewArea.c \
src/private/mListViewArea.h \
src/private/mListViewPopup.c \
src/private/mListViewPopup.h \
src/private/mMenuWindow.c \
src/private/mMenuWindow.h \
src/private/mMenu_pv.c \
src/private/mMenu_pv.h \
src/private/mMultiEditArea.c \
src/private/mMultiEditArea.h \
src/private/mPixbuf_pv.h \
src/private/mTranslation.c \
src/private/mTranslation.h \
src/private/mWidget_pv.c \
src/private/mWidget_pv.h \
src/private/mWindow_pv.h \
src/widget/mAboutDlg.c \
src/widget/mBitImgButton.c \
src/widget/mArrowButton.c \
src/widget/mButton.c \
src/widget/mCheckButton.c \
src/widget/mColorButton.c \
src/widget/mColorDialog.c \
src/widget/mColorPreview.c \
src/widget/mComboBox.c \
src/widget/mContainer.c \
src/widget/mContainerView.c \
src/widget/mContainer_layout.c \
src/widget/mDialog.c \
src/widget/mDockHeader.c \
src/widget/mDockWidget.c \
src/widget/mExpander.c \
src/widget/mFileDialog.c \
src/widget/mFileListView.c \
src/widget/mFontButton.c \
src/widget/mFontDialog.c \
src/widget/mGroupBox.c \
src/widget/mHSVPicker.c \
src/widget/mIconButtons.c \
src/widget/mInputAccelKey.c \
src/widget/mInputTextDlg.c \
src/widget/mLabel.c \
src/widget/mLineEdit.c \
src/widget/mListView.c \
src/widget/mMenuBar.c \
src/widget/mMultiEdit.c \
src/widget/mPopupProgress.c \
src/widget/mPopupWindow.c \
src/widget/mProgressBar.c \
src/widget/mScrollBar.c \
src/widget/mScrollView.c \
src/widget/mSliderBar.c \
src/widget/mSplitter.c \
src/widget/mTab.c \
src/widget/mTextButtons.c \
src/widget/mToolTip.c \
src/widget/mWidget.c \
src/widget/mWidgetBuilder.c \
src/widget/mWindow.c \
src/widget/mListHeader.c \
src/x11/x11_clipboard.c \
src/x11/x11_clipboard.h \
src/x11/x11_cursor.c \
src/x11/x11_dnd.c \
src/x11/x11_dnd.h \
src/x11/x11_event.c \
src/x11/x11_event_sub.c \
src/x11/x11_event_sub.h \
src/x11/x11_im.c \
src/x11/x11_im.h \
src/x11/x11_img_cursor.h \
src/x11/x11_keyconv.c \
src/x11/x11_main.c \
src/x11/x11_pixbuf.c \
src/x11/x11_util.c \
src/x11/x11_util.h \
src/x11/x11_widget.c \
src/x11/x11_window.c \
src/x11/x11_window.h \
src/x11/x11_xinput2.c \
src/x11/x11_xinput2.h
