AM_CPPFLAGS=-I../mlib/include -Iinclude -I@freetype_dir@ -DPACKAGE_DATA_DIR=\""$(datadir)/azpainter"\"
AM_CFLAGS=-pthread

bin_PROGRAMS=azpainter
azpainter_LDADD=../mlib/libmlib.a \
  -lX11 -lXext -lfontconfig -lfreetype -lpng -ljpeg -lz -lrt -lm

azpainter_SOURCES= \
AppCursor.c \
AppResource.c \
ConfigData.c \
configfile.c \
deftrans.h \
main.c \
include/AppCursor.h \
include/AppResource.h \
include/AppErr.h \
include/BrushDrawParam.h \
include/BrushItem.h \
include/BrushList.h \
include/BrushSizeList.h \
include/CanvasDialogs.h \
include/ColorPalette.h \
include/ColorValue.h \
include/ColorWheel.h \
include/ConfigData.h \
include/DockObject.h \
include/Docks_external.h \
include/DrawFill.h \
include/DrawFont.h \
include/DrawPointBuf.h \
include/FileDialog.h \
include/FillPolygon.h \
include/FilterBar.h \
include/FilterDefWidget.h \
include/FilterDrawFunc.h \
include/FilterDrawInfo.h \
include/FilterPrev.h \
include/FilterSaveData.h \
include/GradationList.h \
include/ImageBuf24.h \
include/ImageBuf8.h \
include/ImageBufRGB16.h \
include/LayerDialogs.h \
include/LayerItem.h \
include/LayerList.h \
include/MainWinCanvas.h \
include/MainWindow.h \
include/MainWindow_pv.h \
include/MaterialImgList.h \
include/PixbufDraw.h \
include/PopupThread.h \
include/PrevCursor.h \
include/PrevImage8.h \
include/PrevTileImage.h \
include/SelMaterial.h \
include/SinTable.h \
include/SplineBuf.h \
include/StatusBar.h \
include/TileImage.h \
include/TileImageDrawInfo.h \
include/TileImage_coltype.h \
include/Undo.h \
include/UndoItem.h \
include/ValueBar.h \
include/blendcol.h \
include/dataImagePattern.h \
include/dataMainMenu.h \
include/defBlendMode.h \
include/defCanvasInfo.h \
include/defCanvasKeyID.h \
include/defConfig.h \
include/defDraw.h \
include/defDrawGlobal.h \
include/defFileFormat.h \
include/defLoadErr.h \
include/defMacros.h \
include/defMainWinCanvas.h \
include/defMainWindow.h \
include/defPixelMode.h \
include/defScalingType.h \
include/defTileImage.h \
include/defTool.h \
include/defWidgets.h \
include/draw_boxedit.h \
include/draw_calc.h \
include/draw_file.h \
include/draw_layer.h \
include/draw_main.h \
include/draw_op_def.h \
include/draw_op_func.h \
include/draw_op_main.h \
include/draw_op_sub.h \
include/draw_rule.h \
include/draw_select.h \
include/draw_text.h \
include/file_apd_v3.h \
include/macroToolOpt.h \
include/trgroup.h \
include/trid_layer_dialogs.h \
include/trid_mainmenu.h \
include/trid_message.h \
include/trid_word.h \
include/EnvOptDlg.h \
draw/draw_boxedit.c \
draw/draw_calc.c \
draw/draw_canvas.c \
draw/draw_image.c \
draw/draw_layer.c \
draw/draw_load_adw.c \
draw/draw_load_apd_v1v2.c \
draw/draw_loadsave_apd_v3.c \
draw/draw_loadsave_psd.c \
draw/draw_main.c \
draw/draw_op_brush.c \
draw/draw_op_func1.c \
draw/draw_op_func2.c \
draw/draw_op_main.c \
draw/draw_op_spline.c \
draw/draw_op_sub.c \
draw/draw_op_xor.c \
draw/draw_rule.c \
draw/draw_save_image.c \
draw/draw_select.c \
draw/draw_update.c \
filter/PerlinNoise.c \
filter/PerlinNoise.h \
filter/filter_antialiasing.c \
filter/filter_blur.c \
filter/filter_color.c \
filter/filter_comic.c \
filter/filter_draw.c \
filter/filter_effect.c \
filter/filter_mediancut.c \
filter/filter_other1.c \
filter/filter_sub.h \
filter/filter_subfunc.c \
filter/filter_transform.c \
image/ImageBuf24.c \
image/ImageBuf8.c \
image/ImageBufRGB16.c \
image/ImageBufRGB16_canvas.c \
image/PixbufDraw.c \
image/TileImage.c \
image/TileImage_draw.c \
image/TileImage_draw_brush.c \
image/TileImage_draw_sub.c \
image/TileImage_edit.c \
image/TileImage_imagefile.c \
image/TileImage_pixel.c \
image/TileImage_pv.c \
image/TileImage_pv.h \
image/TileImage_scaling.c \
image/TileImage_select.c \
image/TileImage_type_a1.c \
image/TileImage_type_a16.c \
image/TileImage_type_gray.c \
image/TileImage_type_rgba.c \
image/blendcol.c \
other/BrushItem.c \
other/BrushList.c \
other/BrushSizeList.c \
other/ColorPalette.c \
other/ColorValue.c \
other/DrawFill.c \
other/DrawFont.c \
other/DrawPointBuf.c \
other/FillPolygon.c \
other/FilterSaveData.c \
other/GradationList.c \
other/LayerItem.c \
other/LayerList.c \
other/MaterialImgList.c \
other/SinTable.c \
other/SplineBuf.c \
other/Undo.c \
other/UndoItem.c \
other/UndoItem_base.c \
other/UndoItem_sub.c \
other/UndoItem_tileimg.c \
other/UndoMaster.h \
other/file_apd_v3.c \
other/undo_compress.c \
widget/BrushDetailDlg.c \
widget/BrushListEdit.c \
widget/CanvasCtrlBar.c \
widget/CanvasCtrlBar.h \
widget/CanvasDialogs.c \
widget/CanvasKeyDlg.c \
widget/ColorWheel.c \
widget/PanelLayoutDlg.c \
widget/DockBrush.c \
widget/DockBrushList.c \
widget/DockBrushSize.c \
widget/DockBrushValue.c \
widget/DockCanvasCtrl.c \
widget/DockCanvasView.c \
widget/DockCanvasView.h \
widget/DockCanvasViewArea.c \
widget/DockCanvasView_dlg.c \
widget/DockColor.c \
widget/DockColorPalette.c \
widget/DockColorPalette_colpal.c \
widget/DockColorPalette_editpaldlg.c \
widget/DockColorPalette_gradbar.c \
widget/DockColorPalette_hlspal.c \
widget/DockColorPalette_tab.c \
widget/DockColor_tab.c \
widget/DockColor_widget.c \
widget/DockColorWheel.c \
widget/DockFilterList.c \
widget/DockImageViewer.c \
widget/DockImageViewer.h \
widget/DockImageViewerArea.c \
widget/DockLayer.c \
widget/DockLayer_area.c \
widget/DockLayer_param.c \
widget/DockObject.c \
widget/DockOption.c \
widget/DockOption_other.c \
widget/DockOption_sub.h \
widget/DockOption_tool.c \
widget/DockOption_tool_grad.c \
widget/DockTool.c \
widget/DrawTextDlg.c \
widget/FileDialog.c \
widget/FilterBar.c \
widget/FilterDlg.c \
widget/FilterPrev.c \
widget/FilterWgLevel.c \
widget/FilterWgRepcol.c \
widget/GradationEditDlg.c \
widget/GradationEditWidget.c \
widget/GradationEditWidget.h \
widget/GridOptDlg.c \
widget/LayerColorDlg.c \
widget/LayerDialogs.c \
widget/MainWinCanvas.c \
widget/MainWindow.c \
widget/MainWindow_cmd.c \
widget/MainWindow_file.c \
widget/MainWindow_filter.c \
widget/MainWindow_layer.c \
widget/NewImageDlg.c \
widget/PopupSliderZoom.c \
widget/PopupSliderZoom.h \
widget/PopupThread.c \
widget/PressureWidget.c \
widget/PressureWidget.h \
widget/PrevCursor.c \
widget/PrevImage8.c \
widget/PrevTileImage.c \
widget/SaveOptionDlg.c \
widget/SelMaterial.c \
widget/SelMaterialDlg.c \
widget/ShortcutKeyDlg.c \
widget/StatusBar.c \
widget/ValueBar.c \
widget/TransformDlg_def.h \
widget/TransformDlg.c \
widget/TransformViewArea.c \
widget/TransformViewArea_sub.c \
widget/ToolBarCustomizeDlg.c \
widget/calc_homography.c \
widget/dataFilterDlg.h \
widget/img_layer_amask.h \
widget/img_layer_info.h \
widget/EnvOptDlg_pv.h \
widget/EnvOptDlg.c \
widget/EnvOptDlg_ct1.c \
widget/EnvOptDlg_btt.c
