texturedir=$(datadir)/azpainter/texture

texture1dir=$(texturedir)/tone300
texture2dir=$(texturedir)/tone600
texture3dir=$(texturedir)/various

dist_texture1_DATA= \
tone300/05L01.png \
tone300/05L02.png \
tone300/05L05.png \
tone300/05L10.png \
tone300/05L20.png \
tone300/08L01.png \
tone300/08L02.png \
tone300/08L05.png \
tone300/10L02.png \
tone300/10L05.png \
tone300/10L10.png \
tone300/10L20.png \
tone300/10L30.png \
tone300/15L02.png \
tone300/15L05.png \
tone300/15L10.png \
tone300/15L20.png \
tone300/20L02.png \
tone300/20L05.png \
tone300/20L10.png \
tone300/20L20.png \
tone300/20L30.png \
tone300/20L40.png \
tone300/30L10.png \
tone300/30L20.png \
tone300/30L30.png \
tone300/30L40.png \
tone300/40L10.png \
tone300/40L20.png \
tone300/40L30.png \
tone300/50L10.png \
tone300/50L20.png \
tone300/60L10.png

dist_texture2_DATA= \
tone600/27.5L05.png \
tone600/27.5L10.png \
tone600/27.5L20.png \
tone600/27.5L30.png \
tone600/27.5L40.png \
tone600/30L05.png \
tone600/30L10.png \
tone600/30L20.png \
tone600/30L30.png \
tone600/32.5L05.png \
tone600/32.5L10.png \
tone600/32.5L20.png \
tone600/32.5L30.png \
tone600/42.5L05.png \
tone600/42.5L10.png \
tone600/42.5L20.png \
tone600/42.5L30.png \
tone600/50L05.png \
tone600/50L10.png \
tone600/50L20.png \
tone600/50L30.png \
tone600/55L05.png \
tone600/55L10.png \
tone600/55L20.png \
tone600/55L30.png \
tone600/60L05.png \
tone600/60L10.png \
tone600/60L30.png \
tone600/65L05.png \
tone600/65L10.png \
tone600/85L05.png

dist_texture3_DATA= \
various/brick.png \
various/check1.png \
various/check2.png \
various/check3.png \
various/check4.png \
various/check5.png \
various/check6.png \
various/cross.png \
various/dot01.png \
various/dot02.png \
various/dot03.png \
various/dot04.png \
various/dot05.png \
various/dot06.png \
various/dot07.png \
various/dot08.png \
various/dot09.png \
various/dot10.png \
various/flower.png \
various/gradient1.png \
various/gradient2.png \
various/grid01.png \
various/grid02.png \
various/grid03.png \
various/grid04.png \
various/grid05.png \
various/grid06.png \
various/grid07.png \
various/grid08.png \
various/gridsl1.png \
various/gridsl2.png \
various/heart.png \
various/horz1.png \
various/horz2.png \
various/horz3.png \
various/horz4.png \
various/horz5.png \
various/horz6.png \
various/horz7.png \
various/jag1.png \
various/jag2.png \
various/slant1.png \
various/slant2.png \
various/slant3.png \
various/slant4.png \
various/slant5.png \
various/slant6.png \
various/slant7.png \
various/slant8.png \
various/speed_horz.png \
various/speed_vert.png \
various/square_dot.png \
various/star.png \
various/tone00.png \
various/tone01.png \
various/tone02.png \
various/tone03.png \
various/tone04.png \
various/tone05.png \
various/tone06.png \
various/tone07.png \
various/tone08.png \
various/tone09.png \
various/tone10.png \
various/triangle1.png \
various/triangle2.png \
various/vert1.png \
various/vert2.png \
various/vert3.png \
various/vert4.png \
various/vert5.png \
various/vert6.png \
various/vert7.png \
various/wall.png \
various/white_circle.png \
various/x-mark.png
